--- a/style/laptopscreen/o-nav.css
+++ b/style/laptopscreen/o-nav.css
@@ -6,7 +6,7 @@
         width: 100%;
         height:55px;
         float: left;
-        z-index: 1;
+        z-index: 3;
     }
 
     o-nav.absolute{
